force-app/main/default/objects/Proposal_Detail__c/Proposal_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores individual details or components related to a Proposal, such as product information, pricing, quantities, or custom terms included in the offer.</description>
    <label>Proposal Detail</label>
    <nameField>
        <label>Proposal Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>