force-app/main/default/objects/Proposal_Detail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The heading or name of the specific section or item in the proposal.</description>
    <label>Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>