force-app/main/default/objects/Proposal_Detail__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>A number indicating the order or sequence of the detail within the proposal.</description>
    <label>Index</label>
    <length>8</length>
    <type>Text</type>
</CustomField>