force-app/main/default/objects/Proposal_Detail__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associates this detail record with its parent proposal to group and track all related information under proposal.</description>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposal Details</relationshipLabel>
    <relationshipName>Proposal_Details</relationshipName>
    <type>Lookup</type>
</CustomField>