force-app/main/default/objects/Proposal_Detail__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The name of the specific section or item in the proposal.</description>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>